[project]
name = "local-stats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.17.8",
]

[tool.marimo.runtime]
output_max_bytes = 20_000_000  # 20MB limit (increased from default ~9MB to handle large Folium maps)
